--- a/first.html
+++ b/first.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="first.css">
 </head>
 <body>
-    <a href="index.html"><button>Enter Visualization</button></a>
-    <a href="./app1/index.html"><button>Enter application1</button></a>
-    
+    <div class="container">
+        <div class="title">
+            <h1>Design And Analysis of Algorithm</h1>
+        </div>
+        <div class="links">
+
+            <a href="index.html"><button>Enter Visualization</button></a>
+            <a href="./app1/index.html"><button>Enter application1</button></a>
+            <a href="./app2/index.html"><button>Enter application2</button></a>
+        </div>
+    </div>
 </body>
-</html> 
+</html>
