--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <label for="">Column Number</label>
             <input type="number" class="col-number" min="3" max="27" placeholder="16" value="16" />
           </div>
-          <div class="input">
+          <div class="input" style="display: none;">
             <label for="">Starting number</label>
             <input type="number" class="starting-number" min="1" max="10" placeholder="4" value="4" />
           </div>
