--- a/first.html
+++ b/first.html
@@ -15,7 +15,7 @@
 
             <a href="index.html"><button>Enter Visualization</button></a>
             <a href="./app1/index.html"><button>Enter application1</button></a>
-            <a href="./app2/index.html"><button>Enter application2</button></a>
+            <a href="./app2/ip_search.html"><button>Enter application2</button></a>
         </div>
     </div>
 </body>
