--- a/index.html
+++ b/index.html
@@ -1,227 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Word Search Algorithm Visualizer</title>
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
-    </style>
-    <link rel="stylesheet" href="style.css" />
-    <script lang="javascript" src="./TestcaseGenerator.js"></script>
-    <script lang="javascript" src="./GridMaker.js"></script>
-    <script lang="javascript" src="./GridMarker.js"></script>
-    <script lang="javascript" src="./StateManager.js"></script>
-    <script lang="javascript" src="./GridPointer.js"></script>
-    <script lang="javascript" src="./BruteForceSolver.js"></script>
-    <script lang="javascript" src="./DynamicProgrammingSolver.js"></script>
-    <script lang="javascript" src="./BacktrackingSolver.js"></script>
-    <script lang="javascript" src="./BranchAndBound.js"></script>
-  </head>
-  <body>
-    <div align: "center">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="first.css">
+</head>
+<body>
+    <div class="container">
+        <div class="title">
+            <h1>Design And Analysis of Algorithm</h1>
+        </div>
+        <div class="links">
 
-    
-    <div class="header">
-      <button id="openPopupBtn">Setup</button>
-      <div class="heading">
-        <!-- <h1>Word Search Visualizer</h1> -->
-        <table border="1" class="config animation">
-          <tr>
-            <th>Marker Color</th>
-            <th>Answer Color</th>
-            <th>Interval Time (ms)</th>
-            <td rowspan="2">
-              <button type="submit" onclick="runSolver('bruteforce')">Brute Force!</button>
-            </td>
-            <td rowspan="2">
-              <button type="submit" onclick="runSolver('dynamicprogramming')">Dynamic Programming!</button>
-            </td>
-            <td rowspan="2">
-              <button type="submit" onclick="runSolver('backtracking')">Backtracking!</button>
-            </td>
-            <td rowspan="2">
-              <button type="submit" onclick="runSolver('branchandbound')">Branch & Bound!</button>
-            </td>
-            <th>Elapsed Time</th>
-            <th>Current State</th>
-          </tr>
-          <tr>
-            <td><input class="marker-color" type="color" placeholder="#fbff00" value="#fbff00"></td>
-            <td><input class="answer-color" type="color" placeholder="#33ff00" value="#33ff00"></td>
-            <td><input class="interval-time" type="number" min="1" max="5000" placeholder="100" value="100"></td>
-            <td><label class="elapsed-time">N/A</label></td>
-            <td><label class="current-state">N/A</label></td>
-          </tr>
-        </table>
-      </div>
+            <a href="index.html"><button>Enter Visualization</button></a>
+            <a href="./app1/index.html"><button>Enter application1</button></a>
+            <a href="./app2/ip_search.html"><button>Enter application2</button></a>
+        </div>
     </div>
-    <div class="underline"></div>
-    <div id="popup" class="popup config grid-generator">
-      <div class="popup-content">
-        <span id="closePopupBtn" class="close">&times;</span>
-        <p class="details">Enter the Details</p>
-        <form action="" class="InputSection">
-          <div class="input">
-            <label for="">Row Number</label>
-            <input class="row-number" type="number" min="3" max="11" placeholder="8" value="8" />
-          </div>
-          <div class="input">
-            <label for="">Column Number</label>
-            <input type="number" class="col-number" min="3" max="27" placeholder="16" value="16" />
-          </div>
-          <div class="input" style="display: none;">
-            <label for="">Starting number</label>
-            <input type="number" class="starting-number" min="1" max="10" placeholder="4" value="4" />
-          </div>
-          <div class="input">
-            <label for="">Word</label>
-            <input
-              class="target-words"
-              type="text"
-              minlength="3"
-              maxlength="24"
-              placeholder="WORD"
-              value="WORD"
-            />
-          </div>
-          <div class="input">
-            <button type="submit" onclick="regenerateGrid()">Generate</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-  <div id="canvas"> </div>
-  </div>
-    <script src="script.js"></script>
-  </body>
+</body>
 </html>
-
-<script lang="javascript">
-  generateDirection();
-  regenerateGrid();
-  configureAnimation();
-
-  function generateDirection() {
-    if (typeof window.globals === "undefined") {
-      window.globals = {};
-    }
-
-    window.globals.directions = [
-      [0, -1], [-1, -1], [-1, 0], [-1, 1],
-      [0, 1], [1, 1], [1, 0], [1, -1],
-    ];
-  }
-
-  function regenerateGrid() {
-    event.preventDefault()
-    clearTimeouts();
-
-    const rowNumber = document.querySelector(".InputSection .input .row-number").value;
-    const colNumber = document.querySelector(".grid-generator .col-number").value;
-    const startPointNumber = document.querySelector(".grid-generator .starting-number").value;
-    const targetWords = document.querySelector(".grid-generator .target-words").value;
-
-    // console.log(rowNumber, colNumber)
-
-    const testcase = new TestcaseGenerator({
-      rowNumber,
-      colNumber,
-      startPointNumber,
-      targetLength: targetWords.length,
-      directions: window.globals.directions,
-    });
-    testcase.generate({ targetOverride: targetWords });
-
-    window.globals.grid = testcase.grid;
-    window.globals.target = testcase.target;
-
-    const grid = new GridMaker({
-      grid: testcase.grid,
-      canvasId: "canvas",
-    });
-    grid.draw();
-
-    window.globals.table = grid.table;
-  }
-
-  function configureAnimation() {
-    window.globals.markerColor = document.querySelector(".animation .marker-color").value;
-    window.globals.answerColor = document.querySelector(".animation .answer-color").value;
-    window.globals.intervalTime = document.querySelector(".animation .interval-time").value;
-  }
-
-  function clearTimeouts() {
-    let lastTimeoutId = setTimeout(() => {}, 0);
-    for (let timeoutId = 0; timeoutId < lastTimeoutId; timeoutId += 1) {
-      clearTimeout(timeoutId);
-    }
-  }
-
-  function configureSolver(approach = "") {
-    clearTimeouts();
-    configureAnimation();
-
-    switch (approach) {
-      case "bruteforce":
-        window.globals.bruteForceSolver = new BruteForceSolver({
-          ...window.globals,
-          marker: new GridMarker({ ...window.globals }),
-          pointer: new GridPointer({ ...window.globals }),
-          state: new StateManager({ targetElement: document.querySelector(".animation .current-state") }),
-        });
-        break;
-      case "dynamicprogramming":
-        window.globals.dynamicProgrammingSolver = new DynamicProgrammingSolver({
-          ...window.globals,
-          marker: new GridMarker({ ...window.globals }),
-          pointer: new GridPointer({ ...window.globals }),
-          state: new StateManager({ targetElement: document.querySelector(".animation .current-state") }),
-        });
-        break;
-      case "backtracking":
-        window.globals.backtrackingSolver = new BacktrackingSolver({
-          ...window.globals,
-          marker: new GridMarker({ ...window.globals }),
-          pointer: new GridPointer({ ...window.globals }),
-          state: new StateManager({ targetElement: document.querySelector(".animation .current-state") }),
-        });
-        break;
-      case "branchandbound":
-           window.globals.BranchAndBoundSolver = new BranchAndBoundSolver({
-          ...window.globals,
-          marker: new GridMarker({ ...window.globals }),
-          pointer: new GridPointer({ ...window.globals }),
-          state: new StateManager({ targetElement: document.querySelector(".animation .current-state") }),
-        });
-    }
-  }
-
-  function runSolver(approach = "") {
-    configureSolver(approach);
-
-    switch (approach) {
-      case "bruteforce":
-        window.globals.bruteForceSolver.solve();
-        setElapsedTime(window.globals.bruteForceSolver.elapsedTime);
-        break;
-      case "dynamicprogramming":
-        window.globals.dynamicProgrammingSolver.solve();
-        setElapsedTime(window.globals.dynamicProgrammingSolver.elapsedTime);
-        break;
-      case "backtracking":
-        window.globals.backtrackingSolver.solve();
-        setElapsedTime(window.globals.backtrackingSolver.elapsedTime);
-        break;
-      case "branchandbound":
-      window.globals.BranchAndBoundSolver.solve();
-      setElapsedTime(window.globals.BranchAndBoundSolver.elapsedTime);
-        break;
-    }
-  }
-
-  function setElapsedTime(time = "N/A") {
-    document.querySelector(".animation .elapsed-time").innerHTML = time + "ms";
-  }
-</script>
