--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="links">
 
-            <a href="index.html"><button>Enter Visualization</button></a>
+            <a href="first.html"><button>Enter Visualization</button></a>
             <a href="./app1/index.html"><button>Enter application1</button></a>
             <a href="./app2/ip_search.html"><button>Enter application2</button></a>
         </div>
